<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/login_title_text_style"
                    android:layout_marginTop="15dp"
                    android:text="@string/medical_history" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    tools:ignore="DisableBaselineAlignment,UselessLeaf,UselessParent">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/username_layout"
                        style="@style/login_text_input_layout_style"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:imeOptions="actionNext">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/patient_name_field"
                            style="@style/login_text_input_field_style"
                            android:text=""
                            android:hint="@string/patient_name" />

                    </android.support.design.widget.TextInputLayout>

                    <RelativeLayout
                        android:id="@+id/dob_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        tools:ignore="UselessLeaf">

                        <TextView
                            android:id="@+id/dob_text"
                            style="@style/registration_dob_field_style"
                            android:layout_height="50dp"
                            android:text="02/02/1986" />

                        <TextView
                            android:visibility="gone"
                            style="@style/registration_dob_suffix_text_style"
                            android:layout_height="50dp" />

                        <View
                            style="@style/registration_dob_underline_text_style"
                            android:layout_width="match_parent"
                            android:layout_below="@id/dob_text"
                            android:layout_marginTop="-10dp" />

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/medical_history_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_rectangle_transparent_background"
                    android:padding="10dp"
                    android:text="medical_history_form_description"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/header1"
                    style="@style/medical_history_questions_text_style"
                    android:text="@string/responsive_questions" />

                <android.support.v7.widget.RecyclerView

                    android:id="@+id/optional_question_list"
                    style="@style/medical_history_questions_list_style" />

                <TextView
                    android:id="@+id/header2"
                    style="@style/medical_history_questions_text_style"
                    android:layout_marginTop="10dp"
                    android:text="@string/allergic_questions" />

                <android.support.v7.widget.RecyclerView

                    android:id="@+id/women_list"
                    style="@style/medical_history_questions_list_style" />

                <TextView
                    android:id="@+id/header3"
                    style="@style/medical_history_questions_text_style"
                    android:layout_marginTop="10dp"
                    android:text="@string/diseases_questions" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/disease_list"
                    style="@style/medical_history_questions_list_style" />

                <ProgressBar
                    android:layout_gravity="center"
                    android:id="@+id/loader_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/allergic_que"
                    style="@style/medical_history_questions_text_style"
                    android:layout_marginTop="10dp"
                    android:text="" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/comment_field"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_rectangle_transparent_background"
                    android:hint="@string/comments"
                    android:imeOptions="actionDone"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAppearance="@style/text_input_field_hint_style"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="20sp"
                    tools:ignore="Autofill,TextFields" />

                <TextView
                    android:id="@+id/header4"
                    style="@style/medical_history_questions_text_style"
                    android:text="@string/responsive_questions" />

                <android.support.v7.widget.RecyclerView

                    android:id="@+id/doyouhave_list"
                    style="@style/medical_history_questions_list_style" />

                <TextView
                    style="@style/medical_history_questions_text_style"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/medical_description"
                    android:textSize="14sp" />

                <RelativeLayout
                    android:layout_width="500dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    tools:ignore="UselessParent">

                    <com.github.gcacace.signaturepad.views.SignaturePad
                        android:id="@+id/medical_history_signature_view"
                        style="@style/patient_authorization_signature_view_style"
                        app:penColor="@android:color/white" />

                    <View
                        android:id="@+id/divider_view"
                        style="@style/patient_authorization_view_style"
                        android:layout_below="@id/medical_history_signature_view" />

                    <TextView
                        style="@style/medical_history_questions_text_style"
                        android:layout_below="@id/divider_view"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/signature"
                        android:textAllCaps="true"
                        android:textSize="12sp" />

                    <ImageButton
                        android:id="@+id/clear_button"
                        style="@style/medical_history_signature_clear_button_style"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_clear" />

                </RelativeLayout>


            </LinearLayout>

        </ScrollView>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_marginBottom="15dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="20"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/medical_history_fragment2">
        <RelativeLayout style="@style/medical_history_form_button_layout_style">

            <Button
                android:id="@+id/back_button"
                style="@style/medical_history_form_button_style"
                android:text="@string/back"
                android:background="@drawable/rounded_rectangle_white_background"
                android:textColor="#3893FF"/>

            <Button
                android:visibility="gone"
                android:id="@+id/save_button"
                style="@style/medical_history_form_button_style"
                android:layout_centerHorizontal="true"
                android:text="@string/save"
                android:background="@drawable/rounded_rectangle_white_background"
                android:textColor="#3893FF"/>

            <Button
                android:id="@+id/next_button"
                style="@style/medical_history_form_button_style"
                android:layout_alignParentEnd="true"
                android:text="@string/next"
                android:background="@drawable/rounded_rectangle_white_background"
                android:textColor="#3893FF"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>